tests/binary/errors/offset_non_int.dby
import std.binary as bin

let data: bytes = b"\x01"
print(bin.u8(data, "0"))
